# film-borders

./: .bumpversion.cfg  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cli  LICENSE  LICENSE_MIT  Pipfile  README.md  asset-manifest.json  index.html  manifest.json  nginx.conf  tasks.py
.github/workflows/: build.yml  feature-matrix.yml  release.yml  test.yml
benches/: benches.rs
examples/: builtin-border.rs
src/: border.rs  borders.rs  builtin.rs  cli.rs  dead.rs  debug.rs  defaults.rs  error.rs  imageops.rs  img.rs  junk.rs  lib.rs  numeric.rs  options.rs  test.rs  types.rs  types_old.rs  utils.rs  wasm.rs
src/arithmetic/: cast.rs  clamp.rs  error.rs  mod.rs  option_ord.rs
src/arithmetic/ops/: checked_add.rs  checked_div.rs  checked_mul.rs  checked_sub.rs
src/numeric/: cast.rs  checked_add.rs  checked_div.rs  checked_mul.rs  checked_sub.rs  error.rs  mod.rs  option_ord.rs  rounding.rs
src/numeric/ops/: checked_add.rs  checked_div.rs  checked_mul.rs  checked_sub.rs  mod.rs
src/types/: bounded_size.rs  color.rs  mod.rs  point.rs  rect.rs  rotation.rs  sides.rs  size.rs
static/css/: main.bea759fc.css  main.bea759fc.css.map
static/js/: 787.184ee296.chunk.js  787.184ee296.chunk.js.map  main.18a13700.js  main.18a13700.js.map  main.35b470ab.js  main.35b470ab.js.map  main.5823dffb.js  main.5823dffb.js.map  main.6204b995.js  main.6204b995.js.map  main.a087640d.js  main.a087640d.js.map  main.f4c6b16e.js  main.f4c6b16e.js.map
static/media/: filmborders_bg.50d08e67048e4d618ec2.wasm  filmborders_bg.afcf03bf28221674b514.wasm  filmborders_bg.ead349d0911520c7ca37.wasm  filmborders_bg.f7324a560cb5f7b4e2ce.wasm  filmborders_bg.fe0ff8597402ee64e52c.wasm
wasm/: filmborders.d.ts  filmborders.js  filmborders_bg.wasm  filmborders_bg.wasm.d.ts  package.json
worker/: ImageBorder.worker.js
www/: .gitignore  README.md  config-overrides.js  package.json  tsconfig.json
www/public/: index.html
www/public/worker/: ImageBorder.worker.js
www/src/: App.css  App.sass  App.tsx  index.sass  index.tsx
