[package]
name = "filmborders"
version = "0.0.24"
authors = ["romnn <contact@romnn.com>"]
edition = "2021"
description = "add hipster film borders to your images :)"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://film-borders.romnn.com"
repository = "https://github.com/romnn/film-borders"
categories = [
  "multimedia::images",
  "command-line-utilities",
  "wasm",
  "web-programming"
]
keywords = [
  "image",
  "35mm",
  "film",
  "photography",
  "borders"
]
exclude = [
  "samples/*",
  "www/*",
  "nginx.conf",
  "tasks.py",
  "Dockerfile*"
]

[profile.release]
# debug = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# enable link time optimization
lto = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "film-borders"
path = "src/cli.rs"

[features]
wasm = [
  "console_error_panic_hook",
  "chrono/wasmbind"
]

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = false }
console_error_panic_hook = { version = "0.1", optional = true }
image = "0"
clap = { version = "3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
lazy_static = "1"
chrono = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
tempdir = "0.3"
anyhow = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CanvasRenderingContext2d",
  "ImageData",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "console",
  'CssStyleDeclaration',
  'EventTarget',
]
