[package]
name = "filmborders"
version = "0.0.25"
authors = ["romnn <contact@romnn.com>"]
edition = "2021"
description = "add hipster film borders to your images :)"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://film-borders.romnn.com"
repository = "https://github.com/romnn/film-borders"
categories = [
  "multimedia::images",
  "command-line-utilities",
  "wasm",
  "web-programming"
]
keywords = [
  "image",
  "35mm",
  "film",
  "photography",
  "borders"
]
exclude = [
  "samples/*",
  "www/*",
  "nginx.conf",
  "tasks.py",
  "Dockerfile*"
]

[profile.release]
# optimize for small code size
# opt-level = "z" # or "s"
opt-level = 3 # or "s"
# enable link time optimization
lto = true
# strip debug info
strip = "debuginfo"

[profile.lib]
inherits = "release"
strip = false
opt-level = 3
lto = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "film-borders"
path = "src/cli.rs"

[[bench]]
name = "benches"
harness = false

[features]
default = ["rayon"]
builtin = []
rayon = ["dep:rayon"]
wasm = [
  "builtin",
  "dep:console_error_panic_hook",
  "chrono/wasmbind"
]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = false }
console_error_panic_hook = { version = "0.1", optional = true }
image = "0"
clap = { version = "3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
lazy_static = "1"
chrono = "0.4"
regex = "1"
cfg-if = "0.1"
anyhow = "1"
num = "0.4"
approx = "0.5"
rayon = { version = "1.5", optional = true }

[dev-dependencies]
pretty_assertions = "1"
tempdir = "0.3"
anyhow = "1"
approx = "0"
regex = "1"
# wasm
wasm-bindgen-test = "0.3"
# benchmarking
criterion = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CanvasRenderingContext2d",
  "ImageData",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "console",
  'CssStyleDeclaration',
  'EventTarget',
]
