[package]
name = "filmborders"
version = "0.0.30"
authors = ["romnn <contact@romnn.com>"]
edition = "2021"
description = "add hipster film borders to your images :)"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://film-borders.romnn.com"
repository = "https://github.com/romnn/film-borders"
categories = [
  "multimedia::images",
  "command-line-utilities",
  "wasm",
  "web-programming"
]
keywords = [
  "image",
  "35mm",
  "film",
  "photography",
  "borders"
]
exclude = [
  "samples/*",
  "www/*",
  "nginx.conf",
  "tasks.py",
  "Dockerfile*"
]

[profile.release]
# optimize for small code size
# opt-level = "z" # or "s"
opt-level = 3 # or "s"
# enable link time optimization
lto = true
# strip debug info
strip = "debuginfo"

[profile.lib]
inherits = "release"
strip = false
opt-level = 3
lto = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "film-borders"
path = "src/cli.rs"

[[bench]]
name = "benches"
harness = false

[features]
default = []
# default = ["debug"]
builtin = []
debug = []
wasm = [
  "builtin",
  "chrono/wasmbind"
]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
image = "0"
imageproc = "0"
rusttype = "0.9"
duration-string = "0"
clap = { version = "3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
lazy_static = "1"
chrono = "0.4"
regex = "1"
num = "0.4"

[dev-dependencies]
pretty_assertions = "1"
anyhow = "1"
approx = "0"
regex = "1"
wasm-bindgen-test = "0.3"
criterion = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CanvasRenderingContext2d",
  "ImageData",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "console",
  'CssStyleDeclaration',
  'EventTarget',
]
